--- a/escom-bpm-web/src/main/webapp/resources/css/processes.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/processes.css
@@ -1,8 +1,8 @@
 
 .ui-diagram-task {
     background-color: #9ed4ef;
-    width: 14em;
-    height: 5em;    
+    width: 10em;
+    height: 5em;
 }
 
 .noExecutor {
@@ -43,6 +43,7 @@
 .ui-diagram-start {
     width:3em;
     height:3em;
+    border-radius: 4em;
     background-color: #edef04;
 }
 
@@ -59,9 +60,9 @@
 }
 
 .ui-diagram-procedure {
-    width:7em;
+    width:10em;
     height:4em;
-    background-color: #ffffff;
+    background-color: cadetblue;
 }
 
 .ui-diagram-enter {
@@ -98,13 +99,13 @@
 }
 
 .ui-diagram-completed-state {
-    width:9sem;
+    width:9em;
     height:5em;
     background-color: darkgray;
 }
 
 .ui-diagram-condition {
-    width:8em;
+    width:6em;
     height:6em;
     background-color: #c306ab;
 }
