--- a/escom-bpm-web/src/main/webapp/view/processes/diagramma.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/diagramma.xhtml
@@ -5,7 +5,7 @@
                 template="/view/templ/templ-dlg.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:param name="_bean" value="#{diagramBean}"/>
+    <ui:param name="_bean" value="#{processBean.diagramBean}"/>
 
     <ui:define name="customStyleCSS">      
         <h:outputStylesheet library="css" name="processes.css"/>
@@ -87,6 +87,8 @@
                     function (info) {
                         sendElementClick(info);
                     });
+
+            /*
             $(document).on('dblclick', '.ui-diagram > .ui-diagram-element',
                     function (info) {
                         var xPos = Math.round(info.target.offsetLeft / parseFloat($("body").css("font-size")));
@@ -104,6 +106,7 @@
                             {name: 'posY', value: yPos}
                         ]);
                     });
+            */
 
             function refreshContextMenu(componentId) {
                 //console.log("refresh componentId="+componentId);
@@ -127,58 +130,64 @@
 
     <ui:define name="toolbarComponents" > 
         <p:commandButton value="Tasks" title="#{bundle.AddTasks}"
-                         disabled="#{diagramBean.isReadOnly()}"
+                         disabled="#{_bean.isReadOnly()}"
                          onstart="PF('statusDialog').show()"
                          oncomplete="PF('statusDialog').hide();"
                          actionListener="#{staffBean.onManySelectItem()}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onStaffsSelected}" />
+            <p:ajax event="dialogReturn" listener="#{_bean.onStaffsSelected}" />
         </p:commandButton>
         <p:commandButton  value="And" title="#{bundle.AddLogicElement}"
-                          disabled="#{diagramBean.isReadOnly()}"
-                          actionListener="#{diagramBean.onAddLogicElement('And')}" >
+                          disabled="#{_bean.isReadOnly()}"
+                          actionListener="#{_bean.onAddLogicElement('And')}" >
         </p:commandButton>
         <p:commandButton  value="Or" title="#{bundle.AddLogicElement}"
-                          disabled="#{diagramBean.isReadOnly()}"
-                          actionListener="#{diagramBean.onAddLogicElement('Or')}" >
+                          disabled="#{_bean.isReadOnly()}"
+                          actionListener="#{_bean.onAddLogicElement('Or')}" >
         </p:commandButton>
         <p:commandButton  value="If" title="#{bundle.AddCondition}"
-                          disabled="#{diagramBean.isReadOnly()}"
-                          actionListener="#{diagramBean.onAddConditionElement()}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}" />
-        </p:commandButton>
-
-        <p:commandButton  value="State" title="#{bundle.AddState}"
-                          disabled="#{diagramBean.isReadOnly()}"
-                          actionListener="#{diagramBean.onAddStateElement('success')}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}" />
+                          disabled="#{_bean.isReadOnly()}"
+                          actionListener="#{_bean.onAddConditionElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
         </p:commandButton>
 
         <p:commandButton  value="Timer" title="#{bundle.AddTimer}"
-                          disabled="#{diagramBean.isReadOnly()}"
-                          actionListener="#{diagramBean.onAddTimerElement()}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}" />
+                          disabled="#{_bean.isReadOnly()}"
+                          actionListener="#{_bean.onAddTimerElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
+        </p:commandButton>
+
+        <p:commandButton  value="State" title="#{bundle.AddState}"
+                          disabled="#{_bean.isReadOnly()}"
+                          actionListener="#{_bean.onAddStateElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
         </p:commandButton>
 
         <p:commandButton value="Message" title="#{bundle.AddMessageElement}"
-                         disabled="#{diagramBean.isReadOnly()}"
-                         actionListener="#{diagramBean.onAddMessageElement()}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}" />
+                         disabled="#{_bean.isReadOnly()}"
+                         actionListener="#{_bean.onAddMessageElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
+        </p:commandButton>
+
+        <p:commandButton value="Procedure" title="#{bundle.AddProcedureElement}"
+                         disabled="#{_bean.isReadOnly()}"
+                         actionListener="#{_bean.onAddProcElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
         </p:commandButton>
 
         <p:commandButton value="Start" title="#{bundle.AddStart}"
-                         disabled="#{diagramBean.isReadOnly()}"
-                         actionListener="#{diagramBean.onAddStartElement()}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}" />
+                         disabled="#{_bean.isReadOnly()}"
+                         actionListener="#{_bean.onAddStartElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
         </p:commandButton>
         <p:commandButton value="Enter" title="#{bundle.AddEnter}"
-                         disabled="#{diagramBean.isReadOnly()}"
-                         actionListener="#{diagramBean.onAddEnterElement()}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}" />
+                         disabled="#{_bean.isReadOnly()}"
+                         actionListener="#{_bean.onAddEnterElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
         </p:commandButton>
         <p:commandButton value="Exit" title="#{bundle.AddExit}"
-                         disabled="#{diagramBean.isReadOnly()}"
-                         actionListener="#{diagramBean.onAddExitElement()}" >
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}" />
+                         disabled="#{_bean.isReadOnly()}"
+                         actionListener="#{_bean.onAddExitElement()}" >
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}" />
         </p:commandButton>
 
         <span class="ui-separator">
@@ -186,19 +195,19 @@
         </span>
 
         <p:commandButton title="#{bundle.LoadFromTemlate}" icon="ui-icon-folder-open"
-                         disabled="#{diagramBean.isReadOnly()}"                                         
+                         disabled="#{_bean.isReadOnly()}"                                         
                          onclick="PF('LoadFromTemplDLG').show();"
                          update="LoadFromTemplFRM">                           
         </p:commandButton>
         <p:commandButton title="#{bundle.SaveAsTemlate}" icon="ui-icon-disk"
-                         disabled="#{diagramBean.isReadOnly()}"
+                         disabled="#{_bean.isReadOnly()}"
                          update="SaveAsTemplFRM"
                          onclick="PF('SaveAsTemplDLG').show();">
         </p:commandButton>
 
         <p:commandButton title="Clear" icon="ui-icon-closethick"
-                         disabled="#{diagramBean.isReadOnly()}"
-                         actionListener="#{diagramBean.onClearModel()}"
+                         disabled="#{_bean.isReadOnly()}"
+                         actionListener="#{_bean.onClearModel()}"
                          update="diagramm">
             <p:confirm header="#{msg.ProcessDiagramWillBeCleared}" message="#{bundle.AreYouSure}" icon="ui-icon-alert"/>
         </p:commandButton>
@@ -209,27 +218,27 @@
     </ui:define>
 
     <ui:define name="centerFormContent">  
-        <p:diagram id="diagramm" value="#{diagramBean.model}" style="height:1600px" styleClass="ui-widget-content ui-grid-col-12" var="el" widgetVar="DiagrammWG" >
+        <p:diagram id="diagramm" value="#{_bean.model}" style="height:1600px" styleClass="ui-widget-content" var="el" widgetVar="DiagrammWG" >
             <f:facet name="element" >
-                <h:outputLabel value="#{diagramBean.getElementCaption(el)}" styleClass="diagramm-label" style="display:block;margin:0.5em;word-wrap:break-word;"/>
-                <p:graphicImage value="#{diagramBean.getElementImage(el)}" styleClass="diagramm-image"/>
+                <h:outputLabel value="#{_bean.getElementCaption(el)}" styleClass="diagramm-label" style="display:block;margin:0.5em;word-wrap:break-word;"/>
+                <p:graphicImage value="#{_bean.getElementImage(el)}" styleClass="diagramm-image"/>
             </f:facet>
-            <p:ajax event="connect"    disabled="#{diagramBean.isReadOnly()}" listener="#{diagramBean.onConnect}" />
-            <p:ajax event="disconnect" disabled="#{diagramBean.isReadOnly()}" listener="#{diagramBean.onDisconnect}" />
-            <p:ajax event="connectionChange" disabled="#{diagramBean.isReadOnly()}" listener="#{diagramBean.onConnectionChange}" />
+            <p:ajax event="connect"    disabled="#{_bean.isReadOnly()}" listener="#{_bean.onConnect}" />
+            <p:ajax event="disconnect" disabled="#{_bean.isReadOnly()}" listener="#{_bean.onDisconnect}" />
+            <p:ajax event="connectionChange" disabled="#{_bean.isReadOnly()}" listener="#{_bean.onConnectionChange}" />
         </p:diagram>
 
-        <p:remoteCommand name="elementClicked" actionListener="#{diagramBean.onElementClicked}"/>
-        <p:remoteCommand name="elementOpen" actionListener="#{diagramBean.onElementOpenClick()}"/>
-        <p:remoteCommand name="elementCopy" actionListener="#{diagramBean.onElementCopy()}"/>
-        <p:remoteCommand name="elementPaste" actionListener="#{diagramBean.onElementPaste()}"/>
-        <p:remoteCommand name="elementDelete" actionListener="#{diagramBean.onElementDelete}"/>
+        <p:remoteCommand name="elementClicked" actionListener="#{_bean.onElementClicked}"/>
+        <p:remoteCommand name="elementOpen" actionListener="#{_bean.onElementOpenClick()}"/>
+        <p:remoteCommand name="elementCopy" actionListener="#{_bean.onElementCopy()}"/>
+        <p:remoteCommand name="elementPaste" actionListener="#{_bean.onElementPaste()}"/>
+        <p:remoteCommand name="elementDelete" actionListener="#{_bean.onElementDelete}"/>
 
-        <p:commandButton style="display: none;" id="btnOpenElement" actionListener="#{diagramBean.onElementOpen()}">
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onElementClose}"/>
+        <p:commandButton style="display: none;" id="btnOpenElement" actionListener="#{_bean.onElementOpen()}">
+            <p:ajax event="dialogReturn" listener="#{_bean.onElementClose}"/>
         </p:commandButton>
-        <p:commandButton style="display: none;" id="btnOpenTask" actionListener="#{diagramBean.onOpenTask()}">
-            <p:ajax event="dialogReturn" listener="#{diagramBean.onAfterTaskClose}"/>
+        <p:commandButton style="display: none;" id="btnOpenTask" actionListener="#{_bean.onOpenTask()}">
+            <p:ajax event="dialogReturn" listener="#{_bean.onAfterTaskClose}"/>
         </p:commandButton>
     </ui:define>
 
